# interface-health

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  dvc.yaml  environment.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
artifacts/: .gitignore  metrics.json
artifacts/baseline_v0/: .gitignore  metrics.json
artifacts/contract_v0/: .gitignore
configs/: base.yaml
configs/contract/: endpoint_to_service.yaml  v0.yaml
configs/data/: anomod.yaml
configs/training/: default.yaml
data/: .gitignore  anomod.dvc  lo2-sample.dvc
docs/: reproducibility.md
docs/agent-docs/: TODO.md  dataset-guide.md  lo2-dataset-readme.md  lo2-scripts.md
docs/plans/: 2026-05-08-lit-review-and-research-directions.md  2026-06-26-contract-v0-implementation.md  2026-06-26-multimodal-contract-design.md
history/: index.md
scripts/: build_contract.py  eval.py  eval_baseline_v0.py  train_baseline.py  train_baseline_v0.py
tests/: test_api_preprocessor.py  test_build_contract_smoke.py  test_contract_config.py  test_contract_v0_schema.py  test_dataloader_point.py  test_dataloader_sequence.py  test_deep_svdd.py  test_dvc_pipeline_v0.py  test_e2e_smoke.py  test_e2e_toy_pipeline.py  test_early_concat_fusion.py  test_endpoint_service_mapping.py  test_eval_baseline_v0_stratified.py  test_log_preprocessor.py  test_metric_perf_spike.py  test_metric_preprocessor.py  test_metrics_contract.py  test_normalization.py  test_placeholder.py  test_schema_json_contract.py  test_scores_contract.py  test_trace_preprocessor.py  test_train_baseline_v0.py
(+49 files in other folders)
